--- a/style.css
+++ b/style.css
@@ -21,35 +21,25 @@ body{
     border-radius: 50px;
     margin-left: -100px;
     
+    
 }
 
 .nav-title{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    text-align: center;
+    align-items:center;
     margin-left: 30px;
-    
+    padding: 10px 20px;
 }
 
-.content-title ul li{
-    display: inline-block;
-    margin-left: 40px;
-    margin-right: 50px;
-    
-}
-
-.nav-title a, 
-.content-title a{
-
-    text-decoration: none;
-    color: inherit;
-
-}
 
 .container{
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     display: flex;
     margin-top: 50px;
+    height: 100vh;
 }
 .main{
     height: 80vh;
